# mcpltool

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
cmake/: mcpltool-mcpl.cmake
src/: mcpl.cpp  mcpltool.cpp
src/mcpltool/: __init__.py  cli.py
test/: test_none.py
