[build-system]
requires = [
    "scikit-build-core >=0.4.3",
    "nanobind >=1.7.0",
    "setuptools_scm>=8"
]
build-backend = "scikit_build_core.build"

[project]
name = "mcpltool"
description = "Provides an interface to the C MCPL library to implement mcpltool"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Gregory Tucker", email = "gregory.tucker@ess.eu" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]
dynamic = ["version"]

[project.scripts]
mcpltool = "mcpltool.cli:mcpl_tool_cli"
mcpltool-merge = "mcpltool.cli:merge_cli"
mcpltool-count = "mcpltool.cli:particle_count_cli"

[project.urls]
Homepage = "https://github.com/g5t/mcpltool"

[tool.setuptools_scm]


[tool.scikit-build]
# Use setuptoos-scm to discover the version number
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.cibuildwheel]
# Include compilation build output
build-verbosity = 1

# Run pytest as part of the build
test-command = "pytest {project}/test"
test-requires = "pytest"

# Need for full C++17 support on MacOS
[tool.cibuildwheel.macos.environment]
MACOS_DEPLOYMENT_TARGET = "10.14"
